[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motof"
version = "0.1.0"
description = "Multi-Objective Transportation Optimization Framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

authors = [
    {name="Adrian Petrovan"}
]

dependencies = [
    "numpy>=2.0",
    "scipy",
    "networkx",
    "pandas",
    "pyyaml",
    "matplotlib",
    "pymoo",
    "rich",
    "loguru"
]

[project.optional-dependencies]

dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "mypy"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
